third_party/cairo/cairo.h

cairo_public int
cairo_version (void);
cairo_public const char*
cairo_version_string (void);
typedef int cairo_bool_t;
typedef struct _cairo cairo_t;
typedef struct _cairo_surface cairo_surface_t;
typedef struct _cairo_matrix {
    double xx; double yx;
    double xy; double yy;
    double x0; double y0;
} cairo_matrix_t;
typedef struct _cairo_pattern cairo_pattern_t;
typedef enum _cairo_content {
    CAIRO_CONTENT_COLOR		= 0x1000,
    CAIRO_CONTENT_ALPHA		= 0x2000,
    CAIRO_CONTENT_COLOR_ALPHA	= 0x3000
} cairo_content_t;
typedef enum _cairo_dither {
    CAIRO_DITHER_NONE,
    CAIRO_DITHER_DEFAULT,
    CAIRO_DITHER_FAST,
    CAIRO_DITHER_GOOD,
    CAIRO_DITHER_BEST
} cairo_dither_t;
cairo_public void
cairo_pattern_set_dither (cairo_pattern_t *pattern, cairo_dither_t dither);
cairo_public cairo_dither_t
cairo_pattern_get_dither (cairo_pattern_t *pattern);
cairo_public cairo_t *
cairo_create (cairo_surface_t *target);
cairo_public cairo_t *
cairo_reference (cairo_t *cr);
cairo_public void
cairo_destroy (cairo_t *cr);
cairo_public unsigned int
cairo_get_reference_count (cairo_t *cr);
cairo_public void
cairo_save (cairo_t *cr);
cairo_public void
cairo_restore (cairo_t *cr);
cairo_public void
cairo_push_group (cairo_t *cr);
cairo_public void
cairo_push_group_with_content (cairo_t *cr, cairo_content_t content);
cairo_public cairo_pattern_t *
cairo_pop_group (cairo_t *cr);
cairo_public void
cairo_pop_group_to_source (cairo_t *cr);
typedef enum _cairo_operator {
    CAIRO_OPERATOR_CLEAR,
    CAIRO_OPERATOR_SOURCE,
    CAIRO_OPERATOR_OVER,
    CAIRO_OPERATOR_IN,
    CAIRO_OPERATOR_OUT,
    CAIRO_OPERATOR_ATOP,
    CAIRO_OPERATOR_DEST,
    CAIRO_OPERATOR_DEST_OVER,
    CAIRO_OPERATOR_DEST_IN,
    CAIRO_OPERATOR_DEST_OUT,
    CAIRO_OPERATOR_DEST_ATOP,
    CAIRO_OPERATOR_XOR,
    CAIRO_OPERATOR_ADD,
    CAIRO_OPERATOR_SATURATE,
    CAIRO_OPERATOR_MULTIPLY,
    CAIRO_OPERATOR_SCREEN,
    CAIRO_OPERATOR_OVERLAY,
    CAIRO_OPERATOR_DARKEN,
    CAIRO_OPERATOR_LIGHTEN,
    CAIRO_OPERATOR_COLOR_DODGE,
    CAIRO_OPERATOR_COLOR_BURN,
    CAIRO_OPERATOR_HARD_LIGHT,
    CAIRO_OPERATOR_SOFT_LIGHT,
    CAIRO_OPERATOR_DIFFERENCE,
    CAIRO_OPERATOR_EXCLUSION,
    CAIRO_OPERATOR_HSL_HUE,
    CAIRO_OPERATOR_HSL_SATURATION,
    CAIRO_OPERATOR_HSL_COLOR,
    CAIRO_OPERATOR_HSL_LUMINOSITY
} cairo_operator_t;
cairo_public void
cairo_set_operator (cairo_t *cr, cairo_operator_t op);
cairo_public void
cairo_set_source (cairo_t *cr, cairo_pattern_t *source);
cairo_public void
cairo_set_source_rgb (cairo_t *cr, double red, double green, double blue);
cairo_public void
cairo_set_source_rgba (cairo_t *cr,
		       double red, double green, double blue,
		       double alpha);
cairo_public void
cairo_set_source_surface (cairo_t	  *cr,
			  cairo_surface_t *surface,
			  double	   x,
			  double	   y);
cairo_public void
cairo_set_tolerance (cairo_t *cr, double tolerance);
typedef enum _cairo_antialias {
    CAIRO_ANTIALIAS_DEFAULT,
    CAIRO_ANTIALIAS_NONE,
    CAIRO_ANTIALIAS_GRAY,
    CAIRO_ANTIALIAS_SUBPIXEL,
    CAIRO_ANTIALIAS_FAST,
    CAIRO_ANTIALIAS_GOOD,
    CAIRO_ANTIALIAS_BEST
} cairo_antialias_t;
cairo_public void
cairo_set_antialias (cairo_t *cr, cairo_antialias_t antialias);
typedef enum _cairo_fill_rule {
    CAIRO_FILL_RULE_WINDING,
    CAIRO_FILL_RULE_EVEN_ODD
} cairo_fill_rule_t;
cairo_public void
cairo_set_fill_rule (cairo_t *cr, cairo_fill_rule_t fill_rule);
cairo_public void
cairo_set_line_width (cairo_t *cr, double width);
cairo_public void
cairo_set_hairline (cairo_t *cr, cairo_bool_t set_hairline);
typedef enum _cairo_line_cap {
    CAIRO_LINE_CAP_BUTT,
    CAIRO_LINE_CAP_ROUND,
    CAIRO_LINE_CAP_SQUARE
} cairo_line_cap_t;
cairo_public void
cairo_set_line_cap (cairo_t *cr, cairo_line_cap_t line_cap);
typedef enum _cairo_line_join {
    CAIRO_LINE_JOIN_MITER,
    CAIRO_LINE_JOIN_ROUND,
    CAIRO_LINE_JOIN_BEVEL
} cairo_line_join_t;
cairo_public void
cairo_set_line_join (cairo_t *cr, cairo_line_join_t line_join);
cairo_public void
cairo_set_dash (cairo_t      *cr,
		const double *dashes,
		int	      num_dashes,
		double	      offset);
cairo_public void
cairo_set_miter_limit (cairo_t *cr, double limit);
cairo_public void
cairo_translate (cairo_t *cr, double tx, double ty);
cairo_public void
cairo_scale (cairo_t *cr, double sx, double sy);
cairo_public void
cairo_rotate (cairo_t *cr, double angle);
cairo_public void
cairo_transform (cairo_t	      *cr,
		 const cairo_matrix_t *matrix);
cairo_public void
cairo_set_matrix (cairo_t	       *cr,
		  const cairo_matrix_t *matrix);
cairo_public void
cairo_identity_matrix (cairo_t *cr);
cairo_public void
cairo_user_to_device (cairo_t *cr, double *x, double *y);
cairo_public void
cairo_user_to_device_distance (cairo_t *cr, double *dx, double *dy);
cairo_public void
cairo_device_to_user (cairo_t *cr, double *x, double *y);
cairo_public void
cairo_device_to_user_distance (cairo_t *cr, double *dx, double *dy);
cairo_public void
cairo_new_path (cairo_t *cr);
cairo_public void
cairo_move_to (cairo_t *cr, double x, double y);
cairo_public void
cairo_new_sub_path (cairo_t *cr);
cairo_public void
cairo_line_to (cairo_t *cr, double x, double y);
cairo_public void
cairo_curve_to (cairo_t *cr,
		double x1, double y1,
		double x2, double y2,
		double x3, double y3);