src/_static.mojo

==================================================
# # Static / link-time bindings via external_call
# # ======================================================================

# # These assume the library is already linked (e.g. via -lcairo).
# # Use `external_call` directly — no DLHandle required.
# # For `mojo run` without linking, use CairoLib() and call its methods instead.

# @always_inline
# fn version() -> c_int:
#     return external_call["cairo_version", c_int]()

# @always_inline
# fn version_string() -> UnsafePointer[c_char, ImmutExternalOrigin]:
#     return external_call["cairo_version_string", UnsafePointer[c_char, ImmutExternalOrigin]]()

# @always_inline
# fn pattern_set_dither(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], dither: c_int) -> NoneType:
#     return external_call["cairo_pattern_set_dither", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_int](pattern, dither)

# @always_inline
# fn pattern_get_dither(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_pattern_get_dither", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn create(target: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> UnsafePointer[__CairoT, MutExternalOrigin]:
#     return external_call["cairo_create", UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](target)

# @always_inline
# fn reference(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoT, MutExternalOrigin]:
#     return external_call["cairo_reference", UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn destroy(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_destroy", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_reference_count(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> c_uint:
#     return external_call["cairo_get_reference_count", c_uint, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn save(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_save", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn restore(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_restore", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn push_group(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_push_group", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn push_group_with_content(cr: UnsafePointer[__CairoT, MutExternalOrigin], content: c_int) -> NoneType:
#     return external_call["cairo_push_group_with_content", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_int](cr, content)

# @always_inline
# fn pop_group(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_pop_group", UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn pop_group_to_source(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_pop_group_to_source", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn set_operator(cr: UnsafePointer[__CairoT, MutExternalOrigin], op: c_int) -> NoneType:
#     return external_call["cairo_set_operator", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_int](cr, op)

# @always_inline
# fn set_source(cr: UnsafePointer[__CairoT, MutExternalOrigin], source: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_set_source", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoPatternT, MutExternalOrigin]](cr, source)

# @always_inline
# fn set_source_rgb(cr: UnsafePointer[__CairoT, MutExternalOrigin], red: c_double, green: c_double, blue: c_double) -> NoneType:
#     return external_call["cairo_set_source_rgb", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double, c_double](cr, red, green, blue)

# @always_inline
# fn set_source_rgba(cr: UnsafePointer[__CairoT, MutExternalOrigin], red: c_double, green: c_double, blue: c_double, alpha: c_double) -> NoneType:
#     return external_call["cairo_set_source_rgba", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double, c_double, c_double](cr, red, green, blue, alpha)

# @always_inline
# fn set_source_surface(cr: UnsafePointer[__CairoT, MutExternalOrigin], surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x: c_double, y: c_double) -> NoneType:
#     return external_call["cairo_set_source_surface", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_double, c_double](cr, surface, x, y)

# @always_inline
# fn set_tolerance(cr: UnsafePointer[__CairoT, MutExternalOrigin], tolerance: c_double) -> NoneType:
#     return external_call["cairo_set_tolerance", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double](cr, tolerance)

# @always_inline
# fn set_antialias(cr: UnsafePointer[__CairoT, MutExternalOrigin], antialias: c_int) -> NoneType:
#     return external_call["cairo_set_antialias", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_int](cr, antialias)

# @always_inline
# fn set_fill_rule(cr: UnsafePointer[__CairoT, MutExternalOrigin], fill_rule: c_int) -> NoneType:
#     return external_call["cairo_set_fill_rule", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_int](cr, fill_rule)

# @always_inline
# fn set_line_width(cr: UnsafePointer[__CairoT, MutExternalOrigin], width: c_double) -> NoneType:
#     return external_call["cairo_set_line_width", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double](cr, width)

# @always_inline
# fn set_hairline(cr: UnsafePointer[__CairoT, MutExternalOrigin], set_hairline: cairo_bool_t) -> NoneType:
#     return external_call["cairo_set_hairline", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], cairo_bool_t](cr, set_hairline)

# @always_inline
# fn set_line_cap(cr: UnsafePointer[__CairoT, MutExternalOrigin], line_cap: cairo_line_cap_t) -> NoneType:
#     return external_call["cairo_set_line_cap", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_int](cr, line_cap.value)

# @always_inline
# fn set_line_join(cr: UnsafePointer[__CairoT, MutExternalOrigin], line_join: cairo_line_join_t) -> NoneType:
#     return external_call["cairo_set_line_join", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_int](cr, line_join.value)

# @always_inline
# fn set_dash(cr: UnsafePointer[__CairoT, MutExternalOrigin], dashes: UnsafePointer[c_double, ImmutExternalOrigin], num_dashes: c_int, offset: c_double) -> NoneType:
#     return external_call["cairo_set_dash", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, ImmutExternalOrigin], c_int, c_double](cr, dashes, num_dashes, offset)

# @always_inline
# fn set_miter_limit(cr: UnsafePointer[__CairoT, MutExternalOrigin], limit: c_double) -> NoneType:
#     return external_call["cairo_set_miter_limit", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double](cr, limit)

# @always_inline
# fn translate(cr: UnsafePointer[__CairoT, MutExternalOrigin], tx: c_double, ty: c_double) -> NoneType:
#     return external_call["cairo_translate", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, tx, ty)

# @always_inline
# fn scale(cr: UnsafePointer[__CairoT, MutExternalOrigin], sx: c_double, sy: c_double) -> NoneType:
#     return external_call["cairo_scale", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, sx, sy)

# @always_inline
# fn rotate(cr: UnsafePointer[__CairoT, MutExternalOrigin], angle: c_double) -> NoneType:
#     return external_call["cairo_rotate", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double](cr, angle)

# @always_inline
# fn transform(cr: UnsafePointer[__CairoT, MutExternalOrigin], matrix: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_transform", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]](cr, matrix)

# @always_inline
# fn set_matrix(cr: UnsafePointer[__CairoT, MutExternalOrigin], matrix: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_set_matrix", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]](cr, matrix)

# @always_inline
# fn identity_matrix(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_identity_matrix", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn user_to_device(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: UnsafePointer[c_double, MutExternalOrigin], y: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_user_to_device", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, x, y)

# @always_inline
# fn user_to_device_distance(cr: UnsafePointer[__CairoT, MutExternalOrigin], dx: UnsafePointer[c_double, MutExternalOrigin], dy: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_user_to_device_distance", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, dx, dy)

# @always_inline
# fn device_to_user(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: UnsafePointer[c_double, MutExternalOrigin], y: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_device_to_user", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, x, y)

# @always_inline
# fn device_to_user_distance(cr: UnsafePointer[__CairoT, MutExternalOrigin], dx: UnsafePointer[c_double, MutExternalOrigin], dy: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_device_to_user_distance", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, dx, dy)

# @always_inline
# fn new_path(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_new_path", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn move_to(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: c_double, y: c_double) -> NoneType:
#     return external_call["cairo_move_to", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, x, y)

# @always_inline
# fn new_sub_path(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_new_sub_path", NoneType, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn line_to(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: c_double, y: c_double) -> NoneType:
#     return external_call["cairo_line_to", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double](cr, x, y)

# @always_inline
# fn curve_to(cr: UnsafePointer[__CairoT, MutExternalOrigin], x1: c_double, y1: c_double, x2: c_double, y2: c_double, x3: c_double, y3: c_double) -> NoneType:
#     return external_call["cairo_curve_to", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], c_double, c_double, c_double, c_double, c_double, c_double](cr, x1, y1, x2, y2, x3, y3)
